<resources>
    <string name="app_name">Covid19 Tracker</string>
    <string name="information">About</string>
    <string name="Sort">Filter</string>
    <string name="sort_by_deaths">Sort by deaths</string>
    <string name="sort_by_cases">Sort by cases</string>
    <string name="sort_by_today_cases">Sort by today cases</string>
    <string name="sort_by_today_deaths">Sort by today deaths</string>
    <string name="sort_by_recovered">Sort by recovered</string>
    <string name="today_cases">Today cases</string>
    <string name="cases">Cases</string>
    <string name="deaths">Deaths</string>
    <string name="today_deaths">Today deaths</string>
    <string name="recovered">Recovered</string>
    <string name="active">Active</string>
    <string name="global_results">Global results</string>
</resources>
