<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_info"
        android:icon="@drawable/ic_action_info"
        android:title="@string/information"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_options"
        android:icon="@drawable/ic_action_filter"
        android:title="@string/sort"
        app:showAsAction="ifRoom" >

        <menu>
            <item android:id="@+id/action_filter_by_cases"
                android:icon="@drawable/ic_action_filter"
                android:title="@string/sort_by_cases" />

            <item android:id="@+id/action_filter_by_today_cases"
                android:icon="@drawable/ic_action_filter"
                android:title="@string/sort_by_today_cases" />

            <item android:id="@+id/action_filter_by_deaths"
                android:icon="@drawable/ic_action_filter"
                android:title="@string/sort_by_deaths" />

            <item android:id="@+id/action_filter_by_today_deaths"
                android:icon="@drawable/ic_action_filter"
                android:title="@string/sort_by_today_deaths" />

            <item android:id="@+id/action_filter_by_recovered"
                android:icon="@drawable/ic_action_filter"
                android:title="@string/sort_by_recovered" />
        </menu>
    </item>
</menu>