<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/details_container"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/cases"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cases_count_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:textColor="@android:color/white"
            android:gravity="right"
            tools:text="1234567"
            android:textSize="16sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/today_cases"
            android:textColor="@color/total_cases_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:gravity="right"
            tools:text="12345678"
            android:id="@+id/today_cases_count_view"
            android:textColor="@color/total_cases_color"
            android:textSize="16sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/total_deaths_color"
            android:fontFamily="@font/roboto"
            android:text="@string/deaths"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:textColor="@color/total_deaths_color"
            android:gravity="right"
            android:id="@+id/deaths_count_view"
            android:textSize="16sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/today_deaths_color"
            android:fontFamily="@font/roboto"
            android:text="@string/today_deaths"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/today_deaths_color"
            android:fontFamily="@font/roboto"
            android:gravity="right"
            android:id="@+id/today_deaths_count_view"
            android:textSize="16sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/recovered_color"
            android:fontFamily="@font/roboto"
            android:text="@string/recovered"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/recovered_color"
            android:fontFamily="@font/roboto"
            android:gravity="right"
            android:id="@+id/recovered_count_view"
            android:textSize="16sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/active"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:id="@+id/active_count_view"
            android:textColor="@android:color/white"
            android:gravity="right"
            android:textSize="16sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:fontFamily="@font/roboto"
            android:text="Critical"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:gravity="right"
            android:id="@+id/critical_count_view"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="normal" />

    </LinearLayout>


</LinearLayout>